<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenido"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:visibility="visible">

    <ImageView
        android:id="@+id/imag_foto"
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_nombre"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:accessibilityHeading="false"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/text_duracion"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/duracion" />

    <TextView
        android:id="@+id/text_estado"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:text="@string/estado" />

    <TextView
        android:id="@+id/text_puntuacion"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/puntuacion" />

    <TextView
        android:id="@+id/text_rank"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:text="@string/rank" />

    <TextView
        android:id="@+id/text_url"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:autoLink="web"
        android:text="url" />

    <TextView
        android:id="@+id/text_sinopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sinopsis" />

</LinearLayout>